--- a/rdbms-connection-pool/src/main/resources/db-config.yaml
+++ b/rdbms-connection-pool/src/main/resources/db-config.yaml
@@ -1,6 +1,6 @@
 databaseName: "reseausocial"
-host: "172.31.252.77"
+host: "127.0.0.1"
 port: 3306
-username : "bdd"
-password: "Cha.2001.hid"
+username : "root"
+password: ""
 poolSize: 1
