--- a/xmart-frontend/pom.xml
+++ b/xmart-frontend/pom.xml
@@ -167,6 +167,12 @@
             <version>8.0.28</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!-- Thanks for using https://jar-download.com -->
 
